# gaps-online-software

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CommandPacket_8h_source.html  Doxyfile.in  GapsOnlineSoftwareConfig.cmake.in  INSTALL.md  README.md  TOFCommon_8h_source.html  WaveGAPS_8h_source.html  annotated.html  annotated_dup.js  blobroutines_8h_source.html  calibration_8h_source.html  caraspace_8hpp_source.html  classGAPS_1_1Waveform-members.html  classGAPS_1_1Waveform.html  classGAPS_1_1Waveform.js  classGaps_1_1FatalException-members.html  classGaps_1_1FatalException.html  classGaps_1_1FatalException__coll__graph.dot  classGaps_1_1FatalException__coll__graph.md5  classGaps_1_1FatalException__inherit__graph.map  classGaps_1_1FatalException__inherit__graph.md5  classGaps_1_1TofPacketReader-members.html  classGaps_1_1TofPacketReader.html  classGaps_1_1TofPacketReader.js  classes.html  commands_8h_source.html  conceptHasFromByteStream.html  concepts.html  concepts.js  crates.js  database_8h_source.html  dir_0f69edfa25d8cf0b3215b8fc427c62df.html  dir_0f69edfa25d8cf0b3215b8fc427c62df.js  dir_0f69edfa25d8cf0b3215b8fc427c62df_dep.map  dir_0f69edfa25d8cf0b3215b8fc427c62df_dep.md5  dir_4ea9def300436f25a0de94e5f281e146.html  (+254 more)
analysis/merge_tcfc/: README.md  do-it.sh  merge_tcfc.py  pyproject.toml  settings.toml
analysis/notebooks/: pyproject.toml
analysis/notebooks/achim_notebooks/: first-light.ipynb  search_missing_rb.ipynb
analysis/notebooks/grace_notebooks/: Untitled.ipynb  Untitled1.ipynb  betas.ipynb  ch9-study.ipynb  ch9_fit.ipynb  ch9_rb_vs_mtb_timing.ipynb  charge_compare_multithread.ipynb  charge_comparison.ipynb  custom_fit_method.ipynb  dropped_hg.ipynb  max_pulse_distribution.ipynb  paddle_occupancy.ipynb  rate_plot.ipynb  testing.ipynb  voltage_baseline_individual.ipynb  voltage_rms_composite.ipynb
analysis/run_vetting/: README.md  pyproject.toml  run_vetting.ipynb  run_vetting.py  settings.toml
dataclasses/: CMakeLists.txt
dataclasses/google-protobuf/: GapsEvent.proto  TofEvent.proto  TrackerEvent.proto
dataclasses/pybindings/: WaveGAPS.cpp  WaveGAPS.h  waveform.cxx  waveform.h
python/: CMakeLists.txt  show-runs.py
python/doc/: build-sphinx.sh  conf.py  gaps_online.events.rst  gaps_online.rst  index.rst  pyproject.toml
python/gaps/: __init__.py
python/gaps-online/: README.md  pyproject.toml
python/gaps-online/gaps_online/: __init__.py  analysis.py  commands.py  constants.py  events.py  io.py  run.py  telemetry.py
python/gaps-online/gaps_online/db/: __init__.py  (+1 more)
python/gaps-online/source/: conf.py  index.rst
python/pybindings/: Cargo.toml  README.md
python/pybindings/src/: analysis.rs  caraspace.rs  command_factory.rs  dataclasses.rs  io.rs  lib.rs  liftof.rs  liftof_dataclasses.rs  master_trigger.rs  telemetry.rs
telemetry/: CMakeLists.txt
tof/: CMakeLists.txt  README.md  liftof-cc-config-0.9.json
tof/crusty_kraken/: Cargo.toml  README.md  readoutboard-emulator-config.json  ucla-mt-test.json
tof/crusty_kraken/src/: analysis.rs  calibrations.rs  constants.rs  errors.rs  event_builder.rs  main.rs  master_trigger.rs  monitoring.rs  paddle_packet_cache.rs  readoutboard_blob.rs  readoutboard_comm.rs  reduced_tofevent.rs  test_blobdata.rs  threading.rs  waveform.rs
tof/dataclasses/: README.md
tof/dataclasses/include/: CraneLogging.hh  TOFCommon.h  TOFCommon.h.in  TOFTypeDefs.h
tof/dataclasses/src/: RPaddlePacket.cxx  WaveGAPS.cpp  serialization.cxx
tof/dataclasses/test/: Cargo.toml  README.md
tof/docs/: GAPS Channel mapping.xlsx  channel-mapping.mmd  data_format.md  render.sh
tof/liftof/: CHANGELOG  CHANGELOG.md  Cargo.toml  README.md  build-liftof.py
tof/liftof/liftof-analysis/: CHANGELOG  CHANGELOG.md  Cargo.toml  README.md
tof/liftof/liftof-cc/: CHANGELOG  CHANGELOG.md  Cargo.toml  README.md  analysis-engine-settings.json  build_and_deploy-paolo.sh  build_and_deploy.sh  example-config.json  liftof-cc-config-0.9.1.toml  liftof-cc-config-0.9.2.toml  liftof-cc-config-0.9.3-paolo.toml  liftof-cc-config-0.9.3.toml  liftof-cc-config-0.9.4.toml  liftof-cc-config-0.9.6-paolo.toml  liftof-cc-config-0.9.7-paolo.toml  liftof-cc-config-0.9.json  nts.json  paolo_config.json  ssl.json  tof-manifest-ucla.json  tof-manifest.json  ucla-mt-test.json
tof/liftof/liftof-lib/: CHANGELOG  Cargo.toml  README.md  build-and-deploy.sh
tof/liftof/liftof-python/: Cargo.toml
tof/liftof/liftof-rb/: CHANGELOG  CHANGELOG.md  Cargo.toml  README.md  build_and_deploy.sh  build_and_deploy_achim.sh  build_and_deploy_paolo.sh  calculate-ch-mask.py  liftof.service  runconfig.forever
tof/liftof/liftof-tui/: CHANGELOG  Cargo.toml  README.md  killer.sh
tof/pybindings/: helpers.cxx  helpers.hpp  module.cxx
tof/readoutboard-emulator/: README.md
tof/readoutboard-emulator/include/: BlobFileServer.h
tof/readoutboard-emulator/src/: BlobFileServer.cxx
tof/readoutboard-soft/: Cargo.toml  README.md  build_and_deploy.sh
tof/readoutboard-soft/src/: api.rs  control.rs  main.rs  memory.rs  registers.rs
tof/resources/calibrations/: rb02_cal.txt  rb04_cal.txt  rb11_cal.txt  rb14_cal.txt  rb16_cal.txt  rb17_cal.txt  rb1_cal.txt  rb22_cal.txt  rb25_cal.txt  rb27_cal.txt  rb2_cal.txt  rb3_cal.txt  rb4_cal.txt  rb5_cal.txt  rb6_cal.txt
tof/resources/config/: liftof-config.toml
tof/resources/doc/: checkout-csbf.md  init-tof.md
tof/resources/examples/: unpack-tofpackets.py
tof/resources/mappings/: README.md  create_pid_to_vid.py  ltb_ch_to_rb_ch.json  mtb_ltb_mask_to_ltb.json  paddle-id-to-volume-id.json  setup_at_nts.xlsx  setup_at_ssl.xlsx  tof-cube-vid.json  vid-geometry-cube.json
tof/resources/scripts/: blob2root.py  check-liftof-rb.sh  compare_code.py  convert-pavolt-spreadsheat.py  convert_nts_monidata.py  debug_server.py  do_blob2root.py  dumb_parse_daq.py  get_events_from_file.py  mcmurdo_hv.csv  pico_hal.py  ping-all.sh  read-mapping-xls.py  read_nts_monidata.py  setup-env.sh  setup_commms_for_ipython.py  show-event-stream.py  tof-manifest.updated.json  transform_daq_packet.sh  waveform_panopticum.py  write_tof_ssh_config.py
(+41315 files in other folders)
